src/Cornplex.Api/ingress-service.yml
# NOTE: This file can be added either in UI or in API which will manage all your routes
# REFERENCE:
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# https://medium.com/@Oskarr3/setting-up-ingress-on-minikube-6ae825e98f82
# To run/expose locally use -> kubectl expose deployment cornplex-api-deployment --type=LoadBalancer --name=loadbalancer-service

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cornplex-api-app
  namespace: cornplex-app
  # labels:
  #   app: cornplex-app
spec:
  # defaultBackend:
  #   service:
  #     name: default-http-backend
  #     port:
  #       number: 5000
  rules:
    - host: ""
      http:
        paths:
          - path: / # Path For UI
            pathType: Prefix
            backend:
              service:
                name: cornplex-api-app # this should match your api-service-deployment metadata:name
                port:
                  number: 5000
          - path: /swagger/ # Path For SWAGGER
            pathType: Prefix
            backend:
              service:
                name: cornplex-api-app # this should match your api-service-deployment metadata:name
                port:
                  number: 5000
          - path: /api/ # Path For API
            pathType: Prefix
            backend:
              service:
                name: cornplex-api-app # this should match your api-service-deployment metadata:name
                port:
                  number: 5000
#   externalIPs:
#     - 80.11.12.10

# ---

# Sample 1

# kind: Service
# apiVersion: v1
# metadata:
#   name: ingress-nginx
#   namespace: ingress-nginx
#   labels:
#     app: ingress-nginx
# spec:
#   selector:
#     app: ingress-nginx
#   ports:
#     - name: http
#       port: 80
#       targetPort: http
#     - name: https
#       port: 443
#       targetPort: http
#   externalIPs:
#     - 80.11.12.10
